--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   database:
     container_name: mpesa-wp-db
     image: mysql
-    restart: always
     ports:
       - 3306:3306
     environment:
@@ -20,7 +19,6 @@ services:
     depends_on:
       - database
     build: .
-    restart: always
     ports:
       - 8080:80
     environment:
@@ -29,11 +27,9 @@ services:
       WORDPRESS_DB_PASSWORD: wppass
       WORDPRESS_DB_NAME: wpdb
     volumes:
-      - wp_uploads:/var/www/html/wp-content/uploads
-      - wp_themes:/var/www/html/wp-content/themes
+      - wp_content:/var/www/html/wp-content/
       - ./src:/var/www/html/wp-content/plugins/mpesa-wp-plugin
 
 volumes:
   db:
-  wp_uploads:
-  wp_themes:
+  wp_content:
